2010-04-12  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_configure_gis_map.php,
	include/help/ja/help_gis_map_builder.php,
	include/help/ja/help_gis_setup_map_connection.php,
	include/help/ja/help_setup_gis_index.php: Added the GIS help files
	in Japanese.

2010-04-09 Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/configure_alert_template.php: Typo fix for bug 
	2981933

2010-04-09  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_extensions.php: Changed the function to use,
	from substr() to mb_substr(). substr() can't handle multibyte strings
	correctly.

2010-04-08  Sancho Lerena  <slerena@artica.es>

	* include/config_process.php: Update build version.

2010-04-08  Junichi Satoh  <junichi@rworks.jp>

	* godmode/modules/manage_network_components_form_network.php: Added
	missing '_'.

2010-04-07  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.php: added request the search parameter.
	
	* godmode/alerts/alert_list.list.php: fixed recove lost source code for
	build $where var of old version of godmode/alerts/alert_list.php .

2010-04-07  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.list.php: fixed the id of agent in source and
	now hide the column agent in list when the edit alerts is in the agent
	configuration. 

2010-04-07  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fixed date of last commit.

2010-04-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/jquery.pandora.controls.js: changed the page to ajax in
	the event "pandoraSelectAgentAlert".

	* include/ajax/alert_list.ajax.php: new file with the source code of ajax
	request.
	
	* godmode/agentes/massive_config.php: changed the page to ajax in the
	event "source_id_agent" in the javascript source code.
	
	* godmode/alerts/alert_list.list.php: cleaned unused javascript source code
	that is for use in alert_list.builder.php.

	* godmode/alerts/alert_list.php: erase the php ajax source code and