@@ -1,3 +1,8 @@
+2010-04-12 Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/alerts/alert_list.php: Added Create button for
+	Feature Request 2985798
+
 2010-04-12  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/help/ja/help_configure_gis_map.php,
